[workspace]
members = [
  "crates/cli",
  "crates/jsx_parser",
  "crates/runtime",
  "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.12.46"
authors = ["Víctor García"]
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true

[profile.dist]
inherits = "release"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true

[profile.dev.package."*"]
opt-level = 3
