[package]
name = "query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage = "https://github.com/gc-victor/query/tree/main/crates/cli"
repository = "https://github.com/gc-victor/query"
documentation = "https://qery.io/docs"

[features]
default = ["reqwest/default-tls"]
vendored-openssl = ["openssl/vendored"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3.5"
colored = "3.0.0"
dotenv = "0.15.0"
inquire = "0.7.5"
jsx_parser = { path = "../jsx_parser" }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
num_cpus = "1.16.0"
once_cell = "1.20.3"
openssl = { version = "0.10", features = ["vendored"] }
query-runtime = { path = "../runtime" }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
    "full-async",
    "parallel",
    "rust-alloc",
], default-features = false }
rustyline = "15.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_derive = "1.0.218"
serde_json = "1.0.139"
tabled = "0.18.0"
tempfile = "3.17.1"
tokio = { version = "1.43", features = ["full"] }
toml = { version = "0.8", features = ["preserve_order"] }
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
watchexec = "5.0.0"
