[package]
name = "query-docs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/gc-victor/query"
homepage = "https://github.com/gc-victor/query/tree/main/crates/docs"

[dependencies]
anyhow = "1.0.97"
clap = "4.5.31"
indicatif = "0.17.11"
minijinja = { version = "2.9.0", features = ["loader"] }
pulldown-cmark = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.18.0"
walkdir = "2.5.0"
yaml-rust2 = "0.10.0"
