[package]
name = "query-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
base64-simd = "0.8"
bytes = "1.8.0"
extism = "1.9.0"
extism-manifest = "1.8.0"
fxhash = "0.2"
hex-simd = "0.8"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "http2",
    "ring",
    "webpki-tokio",
] }
hyper-util = "0.1"
itoa = "1.0"
jsonwebtoken = "9.3"
lettre = { version = "0.11.12", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1",
    "tokio1-native-tls",
] }
llrt_modules = { git = "https://github.com/awslabs/llrt", package = "llrt_modules", rev = "cecb5cb4662c03dbad7d5af872cfdde60cbde847", features = [
    "abort",
    "assert",
    "buffer",
    "crypto",
    "events",
    "exceptions",
    "timers",
    "url",
], default-features = false }
llrt_utils = { git = "https://github.com/awslabs/llrt", package = "llrt_utils", rev = "cecb5cb4662c03dbad7d5af872cfdde60cbde847" }
mini-moka = "0.10"
once_cell = "1.20"
phf = { version = "0.11", features = ["macros"] }
rand = "0.9"
rbase64 = "2.0"
regex = "1.11"
ring = "0.17"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
    "full-async",
    "parallel",
    "rust-alloc",
], default-features = false }
rusqlite = { version = "0.33", features = [
    "backup",
    "blob",
    "bundled",
    "functions",
    "limits",
    "serde_json",
    "trace",
    "uuid",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.14", default-features = false, features = [
    "big-int-as-float",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.5"
uuid = { version = "1.12", default-features = false, features = [
    "fast-rng",
    "v4",
] }
webpki-roots = "0.26"
