[package]
name = "query-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
base64-simd = "0.8"
bytes = "1.10.1"
extism = "1.11.1"
extism-manifest = "1.10.0"
fxhash = "0.2.1"
hex-simd = "0.8.0"
http-body-util = "0.1.3"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "http2",
    "ring",
    "webpki-tokio",
] }
hyper-util = "0.1.11"
itoa = "1.0.15"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.16", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1",
    "tokio1-native-tls",
] }
llrt_modules = { git = "https://github.com/awslabs/llrt", version = "0.5.1-beta", features = [
    "abort",
    "assert",
    "buffer",
    "crypto",
    "events",
    "exceptions",
    "timers",
    "url",
], default-features = false }
llrt_utils = { git = "https://github.com/awslabs/llrt", version = "0.5.1-beta" }
mini-moka = "0.10.3"
once_cell = "1.21.3"
phf = { version = "0.11", features = ["macros"] }
rand = "0.9.1"
rbase64 = "2.0"
regex = "1.11.1"
ring = "0.17.14"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
    "full-async",
    "parallel",
    "rust-alloc",
], default-features = false }
rusqlite = { version = "0.35", features = [
    "backup",
    "blob",
    "bundled",
    "functions",
    "limits",
    "serde_json",
    "trace",
    "uuid",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
ryu = "1.0.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simd-json = { version = "0.15", default-features = false, features = [
    "big-int-as-float",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.5.4"
uuid = { version = "1.17", default-features = false, features = [
    "fast-rng",
    "v4",
] }
webpki-roots = "1.0.0"
