[package]
name = "query-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Server for SQLite databases."
homepage = "https://github.com/gc-victor/query/tree/main/crates/server"
repository = "https://github.com/gc-victor/query"

[features]
vendored-openssl = ["openssl/vendored"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
argon2 = "0.5"
chacha20poly1305 = "0.10"
dotenv = "0.15"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
jsonwebtoken = "9.2"
query-runtime = { path = "../runtime" }
rbase64 = "2.0"
regex = "1.10"
rquickjs = "0.5.1"
rusqlite = { version = "0.31", features = ["backup", "blob", "bundled", "functions", "limits", "serde_json", "trace", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
